# mem-utils

./: .gitignore  CMakeLists.txt  README.md  mpsoc.cmake  zynq.cmake
tools/: CMakeLists.txt  memload.cpp  memr.cpp  memsave.cpp  memw.cpp
