
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})




ADD_EXECUTABLE(memr memr.cpp)
ADD_EXECUTABLE(memw memw.cpp)
ADD_EXECUTABLE(memsave memsave.cpp)
ADD_EXECUTABLE(memload memload.cpp)

	
INSTALL(TARGETS memr DESTINATION bin)
INSTALL(TARGETS memw DESTINATION bin)
INSTALL(TARGETS memsave DESTINATION bin)
INSTALL(TARGETS memload DESTINATION bin)